--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,20 @@
 {
     "env": {
         "es6": true,
-        "node": true
+        "node": true,
+        "jest/globals": true
     },
     "extends": [
-        "airbnb-base"
+        "airbnb-base",
+        "plugin:jest/recommended"
     ],
     "globals": {
         "Atomics": "readonly",
         "SharedArrayBuffer": "readonly"
     },
+    "plugins": [
+        "jest"
+    ],
     "parserOptions": {
         "ecmaVersion": 2018
     },
@@ -30,6 +35,9 @@
             "off"
         ],
         "no-restricted-syntax": [
+            "off"
+        ],
+        "no-else-return": [
             "off"
         ]
     }
